button styles and fixing nav things on mobile

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -342,6 +342,7 @@ footer {
     padding: 15px 25px;
     border: 3px solid #fff;
     border-radius: 30px;
+    padding-top: 16px;
     @include transition();
 
     &:hover {
@@ -824,6 +825,7 @@ footer {
         color: $base-color;
         font-weight: 700;
         box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+        padding-top: 10px;
         @include transition();
 
         &:hover {
@@ -946,6 +948,16 @@ footer {
         p {
             text-align: left;
         }
+    }
+
+    #mobile-menu-open {
+        .fa {
+            padding-top: 6px;
+        }
+    }
+
+    #lead-content a {
+        padding-top: 13px;
     }
 
 }
